Added news links

--- a/What_Can_I_do.html
+++ b/What_Can_I_do.html
@@ -138,20 +138,20 @@
 		<h3 class="first-row-h3">The News</h3>
 		<div class="first-row-p">
 			<p>It is important to get accurate information from credible news sources. Checkout our favorite ones:</p>
-			<a href=""><button><p>The New York Times</h4></button></a>
-			<a href=""><button><p>CNN</p></button></a>
-			<a href=""><button><p>WIRED</p></button></a>
-			<a href=""><button><p>SmartNews</p></button></a>
+			<a href="https://www.nytimes.com/"><button><p>The New York Times</h4></button></a>
+			<a href="https://www.cnn.com/"><button><p>CNN</p></button></a>
+			<a href="https://www.cdc.gov/coronavirus/2019-ncov/index.html"><button><p>Center for Disease Control</p></button></a>
+			<a href="https://www.theguardian.com/us"><button><p>The Guardian</p></button></a>
 		</div>
 		<h3 class="second-row-h3">The Numbers</h3>
 		<div class="second-row-p">
 			<p>Accurate live maps, graphs, and numbers:</p>
-			<a href=""><button><p>Johns Hopkins Coronavirus Resource Center</p></button></a>
+			<a href="https://coronavirus.jhu.edu/map.html"><button><p>Johns Hopkins Coronavirus Resource Center</p></button></a>
 		</div>
 		<h3 class="third-row-h3">The Science</h3>
 		<div class="third-row-p">
 			<p>Most recent research on the virus:</p>
-			<a href=""><button><p>World Health Organization</p></button></a>
+			<a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019"><button><p>World Health Organization</p></button></a>
 		</div>
 
 		
