minor about us change

--- a/about.html
+++ b/about.html
@@ -204,7 +204,7 @@
 			</path>
 		</svg>
 		<h5>
-			Hello! We are the authors of this site. Both of us are current Computer Science undergraduates at Harvard. Please do not hesitate to contact us if you have any questions/comments/suggestions! Or if you just want to chat! It is very nice to meet you!
+			Hello! We are the designers, developers, and authors of this site. Both of us are current Computer Science undergraduates at Harvard. Please do not hesitate to contact us if you have any questions/comments/suggestions! Or if you just want to chat! It is very nice to meet you!
 		</h5>
 		</div>
 				
