minor about us change

--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
 				</path>
 			</svg>
 
-			<h5 class="chat-bubble-1">My name is Yao Yin. I’m originally from Shenzhen, China. I love the math & sciences, running, drawing pictures, and cooking all kinds of good food. You can learn more about me <a href="www.yaosarayin.com">here</a>!</h5>
+			<h5 class="chat-bubble-1">My name is Yao Yin. I’m originally from Shenzhen, China. I love the math & sciences, running, drawing pictures, and cooking all kinds of good food. You can learn more about me <a href="http://www.yaosarayin.com">here</a>!</h5>
 		</div>
 	
 		<div class="chat-bubble-3">	
