Added interactive Map

--- a/What_is_happening.html
+++ b/What_is_happening.html
@@ -191,6 +191,9 @@
 		</div>
 		<img id="chart" src="img/chart.svg">
 		<img id="map" src="img/map.svg">
+		<iframe srcdoc="index2.html" width="400" height="300">
+			<p>Your browser does not support iframes.</p>
+		  </iframe>
 	</div>
 	<a href="index.html" id="home-button-bottom">
 		<img src="img/home-button.svg">
