Added data Link

--- a/data.html
+++ b/data.html
@@ -1302,8 +1302,8 @@
 [-13.133897, 27.849332, 70.0],
 ]);
             var options = {
-            displayMode: 'markers',
-            colorAxis: {colors: ['#fac1ec', '#b9f0b2']},
+            displayMode: 'markers', //#fac1ec, #ffa3f9
+            colorAxis: {colors: ['#fffa6e', '#ff5797']},
             sizeAxis: { minSize:1,  maxSize: 20}
         };
         var chart = new google.visualization.GeoChart(document.getElementById('regions_div'));
