--- a/What_is_happening.html
+++ b/What_is_happening.html
@@ -190,7 +190,9 @@
 			<h3 style="color: white">Spread of the Virus</h3>
 		</div>
 		<img id="chart" src="img/chart.svg">
+	<a href="data.html" id="data-button">
 		<img id="map" src="img/map.svg">
+	</a>
 	</div>
 	<a href="index.html" id="home-button-bottom">
 		<img src="img/home-button.svg">
