Added Languages menu

--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
 </div>
 
 <div class="container" id="Landing">
-	<a href="index.html"><img id='language-button-top' src="img/world_languages.png"></a>
+	<div class="dropdown-container">
+		<img id='language-button-top' src="img/world_languages.png">
+		<button class="dropdown">TEST</button>
+		<div class="dropdown-content">
+				<a href="#">Serbian/Bosnian/Croatian</a>
+				<a href="#">English</a>
+		</div>
+	</div>
 	<div id="landing_view">
 		<svg class="pink_gaussian" viewBox="-3.659 -12.545 1162.404 609.98">
 			<path fill="rgba(255,137,151,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="pink_gaussian" d="M 789.2969970703125 423.26123046875 C 640.7239990234375 270.8130798339844 621.6600952148438 -3.357708930969238 501.85400390625 -12.35809135437012 C 387.5532836914062 -20.98811531066895 349.1394958496094 270.8130798339844 245.3561401367188 423.26123046875 C 141.5727844238281 575.7093505859375 -3.658812999725342 597.4343872070312 -3.658812999725342 597.4343872070312 L 1158.744750976562 597.4343872070312 C 1158.744750976562 597.4343872070312 937.8702392578125 575.7093505859375 789.2969970703125 423.26123046875 Z">
@@ -50,7 +57,7 @@
 		<svg class="yellow_gaussian" viewBox="-3.659 10.735 1320 280">
 			<path fill="rgba(255,208,91,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="yellow_gaussian" d="M 863.791259765625 10.94438743591309 C 966.2111206054688 5.57613468170166 1034.599975585938 104.6123199462891 1143.732788085938 196.021728515625 C 1222.748901367188 262.1872253417969 1316.341064453125 290.7354125976562 1316.341064453125 290.7354125976562 L -3.658812999725342 290.7354125976562 C -3.658812999725342 290.7354125976562 282.1087951660156 254.7081298828125 517.7849731445312 161.8138275146484 C 656.5780029296875 107.1016006469727 793.1240234375 14.64833831787109 863.791259765625 10.94438743591309 Z">
 			</path>
-		</svg>
+		</svg>	
 		<div id="title">
 			<h1>CovidCheatSheet</h1>
 			<h4 style="font-weight: 400;">Facts and FAQs about COVID-19 </h4>
