--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 
 <div class="container" id="Landing">
 	<div class="dropdown-container">
-		<img id='language-button-top' src="img/world_languages.png">
-		<button class="dropdown">TEST</button>
+		<button class="dropdown"><img id='language-button-top' src="img/world_languages.png"></button>
 		<div class="dropdown-content">
 				<a href="#">Serbian/Bosnian/Croatian</a>
 				<a href="#">English</a>
