Combined Language button + image

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 </div>
 
 <div class="container" id="Landing">
-	<div class="dropdown-container">
-		<button class="dropdown"><img id='language-button-top' src="img/world_languages.png"></button>
+	<div class="dropdown">
+		<button class="dropbtn"><img id='language-button-top' src="img/world_languages.png"></button>
 		<div class="dropdown-content">
-				<a href="#">Serbian/Bosnian/Croatian</a>
-				<a href="#">English</a>
+			<a href="#">Serbian/Bosnian/Croatian</a>
+			<a href="#">English</a>
 		</div>
 	</div>
 	<div id="landing_view">
