--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <div class="container" id="Landing">
 	<div class="dropdown">
-		<button class="dropbtn"><img id='language-button-top' src="img/world_languages.png"></button>
+		<button class="dropbtn"><img class='language-button-top' src="img/world_languages.png"></button>
 		<div class="dropdown-content">
 			<a href="#">Serbian/Bosnian/Croatian</a>
 			<a href="#">English</a>
