--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <div class="container" id="Landing">
 	<div class="dropdown">
-			<img src="img/world_languages.png">
+		<img class="language-img" src="img/world_languages.png">
 		<button class="dropbtn">Test</button>
 		<div class="dropdown-content">
 			<a href="#">Serbian/Bosnian/Croatian</a>
